[package]
name = "pinata-sdk"
version = "0.1.1"
keywords = ["ipfs", "api", "pinata"]
categories = ["api-bindings", "web-programming::http-client"]
description = "Rust SDK for the Pinata IPFS platform"
authors = ["Perfect Makanju <oss@perfects.engineering>"]
documentation = "https://docs.rs/pinata-sdk"
repository = "https://github.com/perfectmak/pinata-sdk"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.1"
failure = { version = "0.1.7" }
log = "0.4.8"
derive_builder = "0.9.0"

[dev-dependencies]
insta = "0.16.0"
